--- a/nonDesignTask2/package.json
+++ b/nonDesignTask2/package.json
@@ -13,6 +13,7 @@
         "body-parser": "^1.19.0",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
+        "express-validator": "^6.6.1",
         "mongoose": "^5.10.12"
     }
 }
