--- a/task2/package.json
+++ b/task2/package.json
@@ -15,6 +15,7 @@
         "body-parser": "^1.19.0",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
+        "express-validator": "^6.6.1",
         "mongoose": "^5.10.12",
         "postcss": "^8.1.6",
         "postcss-cli": "^8.2.0",
