--- a/task5__/package.json
+++ b/task5__/package.json
@@ -19,6 +19,7 @@
         "express-validator": "^6.6.1",
         "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
+        "node-fetch": "^2.6.1",
         "postcss": "^8.1.7",
         "postcss-cli": "^8.2.0",
         "tailwindcss": "^1.9.6"
