--- a/task5__/package.json
+++ b/task5__/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "autoprefixer": "^10.0.2",
         "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.5",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
